<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/opt_Inicio"
            android:icon="@drawable/ic_inicio_abstracto_24dp"
            android:title="@string/menu_item_inicio" />
        <item
            android:id="@+id/opt_Targetas"
            android:icon="@drawable/ic_formas_pago_24dp"
            android:title="@string/menu_item_formas_pago" />
        <item
            android:id="@+id/opt_MiCuenta"
            android:icon="@drawable/ic_mi_cuenta_24dp"
            android:title="@string/menu_item_mi_perfil" />
  <!--      <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>
    <group
        android:id="@+id/secondGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/opt_Configuracion"
            android:icon="@drawable/ic_configuracion_24dp"
            android:title="@string/menu_item_configuracion" />
        <!--<item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/switch_in_nav_options"
            android:title="Option"
            app:actionLayout="@layout/switch_nav_options" />-->


    </group>

    <!--<item android:title="Mas opciones">

        <menu>
            <item
                android:id="@+id/opt_Compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="Compartir" />
            <item
                android:id="@+id/opt_Configuracion"
                android:icon="@drawable/ic_configuracion_24dp"
                android:title="@string/menu_item_configuracion" />
        </menu>
    </item>-->

</menu>
